--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^8.54",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "stevebauman/location": "^6.6"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
